<resources>
    <string name="app_name">JoTrainerAdmin</string>
    <string name="joTrainerAppName">JoTrainer</string>
    <string name="emailStr">Email</string>
    <string name="passWord">Password</string>
    <string name="loginStr">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moreStr">more</string>
    <string name="ContactsStr">Trainer Information</string>
    <string name="approveStr">Approve</string>
    <string name="stopStr">Stop Trainer Account</string>
</resources>